Refactor: Add api/ prefix for route & add relationship to model
